Agregue un parrafo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Bienvenidos a mi sitio web</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis similique earum nihil esse possimus vel quam aperiam voluptatem, recusandae vitae quod nisi nostrum autem laudantium labore, maxime distinctio accusamus. Maxime.</p>
     
 </body>
 </html>
